--- a/Solana-locale/locales-wallet-settings.json
+++ b/Solana-locale/locales-wallet-settings.json
@@ -397,7 +397,7 @@
 		},
 		"privacy": {
 			"english": "Privacy",
-			"korean": "은둔",
+			"korean": "개인 정보",
 			"mandarin": "隐私",
 			"japanese": "隠された",
 			"spanish": "Oculto",
